// Original file: src/proto/proto/product.proto


export interface QueryProduct {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'name'?: (string);
  'description'?: (string);
  'typeId'?: (number);
  'logo'?: (string);
  'companyId'?: (number);
  'thumb'?: (string);
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_page'?: "page";
  '_limit'?: "limit";
  '_sortBy'?: "sortBy";
  '_sortOrder'?: "sortOrder";
  '_name'?: "name";
  '_description'?: "description";
  '_typeId'?: "typeId";
  '_logo'?: "logo";
  '_companyId'?: "companyId";
  '_thumb'?: "thumb";
}

export interface QueryProduct__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'name'?: (string);
  'description'?: (string);
  'typeId'?: (number);
  'logo'?: (string);
  'companyId'?: (number);
  'thumb'?: (string);
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_page': "page";
  '_limit': "limit";
  '_sortBy': "sortBy";
  '_sortOrder': "sortOrder";
  '_name': "name";
  '_description': "description";
  '_typeId': "typeId";
  '_logo': "logo";
  '_companyId': "companyId";
  '_thumb': "thumb";
}
